# assignment-autotest

./: .gitignore  .gitlab-ci.yml  CMakeLists-parent-example.txt  CMakeLists.txt  LICENSE  README-assignment-testing.md  README.md  auto_generate.sh  full-test.sh  test-basedir.sh  test-unit.sh  test.sh
.github/workflows/: github-actions.yml
assignment-testing/: Dockerfile  assignment-1-test-iteration.sh  assignment-1-test.sh  assignment-test.sh  do-docker-test  do-test  do-test-local  do-test-local-timeout  script-helpers
docker/: docker-run-test.sh  options  run-test.sh
examples/autotest-validate/: autotest-validate-main.c
test/: assignment-test.sh
test/assignment1/: Test_assignment_validate.c  Test_hello.c  assignment-1-test-iteration.sh  assignment-test.sh  script-helpers  username-from-conf-file.h
test/assignment2/: Test_systemcalls.c  assignment-test.sh  assignment-timeout  file_write_commands.h  script-helpers
test/assignment3/: Test_systemcalls.c  Test_threading.c  assignment-1-test.sh  assignment-3-checks  assignment-3-test-add-scripts.sh  assignment-3-test-init.sh  assignment-3-test.sh  assignment-test.sh  assignment-timeout  assignment3-build.sh  assignment3-test.sh  file_write_commands.h  script-helpers  test_qemu_data.sh  test_start_qemu_terminal.sh
test/assignment4/: Test_threading.c  assignment-1-test-iteration.sh  assignment-1-test.sh  assignment-4-test.sh  assignment-test.sh  script-helpers
test/assignment4-buildroot/: assignment-1-test.sh  assignment-4-build.sh  assignment-4-test.sh  assignment-test.sh  assignment-timeout  buildroot-common-build.sh  script-helpers
test/assignment5/: assignment-test.sh  long_string.txt  multiple_packets.txt  sockettest.sh
test/assignment5-buildroot/: assignment-test.sh  do-test  long_string.txt  script-helpers  sockettest.sh
test/assignment6/: assignment-test.sh  script-helpers  sockettest.sh
test/assignment6-yocto/: Dockerfile  assignment-4-test-expect.sh  assignment-5-test.sh  assignment-6-build.sh  assignment-test.sh  assignment-timeout  build.sh  do-docker-test  do-test  do-test-local  do-test-local-timeout  docker-ssh-setup  long_string.txt  readme.md  runqemu.sh  script-helpers  sockettest.sh  sockettest_long_string.sh  yocto-common-build.sh
test/assignment7-yocto/: assignment-test.sh  (+2 more)
(+25 files in other folders)
